--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section:last-of-type {
 
 /* 3️ Personal Training – kelabu cerah */
 .pt-card {
-  background-color: #6FB2E3;
+  background-color: #E8E8E8;
   color: #000;
 }
 
@@ -154,3 +154,4 @@ section:last-of-type {
   margin: 0 auto;
 
 }
+
